--- a/Day3task.html
+++ b/Day3task.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<style type="text/css">
 		body{
 			background:url(on.jpg);
 			background-repeat: no-repeat;
 			background-size:cover;
+			align-content: left;
 		}
 	</style>
 </head>
@@ -14,10 +16,15 @@
 	<div style="height: 500px;width: 300px; background-color: White">
 		<h1>Registration</h1>
 <form>
+	<i class="fa fa-user-circle"></i>
 	<input type="text" name="uname" placeholder="UserName"><br>
+	<i class="fa fa-phone"></i>
 	<input type="number" name="pnumber" placeholder="PhoneNumber"><br>
+	<i class="fa fa-envelope"></i>
 	<input type="email" name="email" placeholder="Email"><br>
+	<i class="fa fa-lock"></i>
 	<input type="password" name="pass" placeholder="password"><br>
+	<i class="fa fa-lock"></i>
 	<input type="password" name="cpass" placeholder="Confirmpassword"><br>
 	<input type="submit" value="register" style="background-color: blue">
 </form>
